# cryptodivebot

./: .env  README.md  config.py  init_db.py  main.py  pyproject.toml  requirements.txt
data/: questions.json
handlers/: admin.py  user.py
middleware/: dispatcher.py  throttling.py
models/: user.py
services/: chat.py  coins.py  matching.py  quiz.py  user_manager.py
webapp/: index.html
webapp/static/css/: styles.css
webapp/static/js/: app.js
